<?xml version="1.0"?>
<package format="3">
  <name>team_integration</name>
  <version>0.0.1</version>
  <description>Integration node: global goal -> local goal, velocity merging</description>

  <maintainer email="">Waleed</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
